<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Мой баланс</string>
    <string name="comment">Комментарий</string>
    <string name="amount">Сумма</string>
    <string name="settings_name">Настройки</string>
    <string name="delete_record">Удалить</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="card_name">Счет</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="transaction">Транзакция</string>
    <string name="comission">Комиссия</string>
    <string name="indebtedness">Задолженность</string>
    <string name="balance">Баланс</string>
    <string name="calculated_balance">Рассчитанный баланс</string>
    <string name="label">Метка</string>
    <string name="details">Подробно</string>
    <string name="edit">Редактировать</string>
    <string name="repeated_transaction">Повторяющаяся транзакция</string>
    <string name="need_confirmation">Требовать подтверждения транзакции</string>
    <string name="every">Каждое 21 число</string>
    <string name="last_day_of_month">Каждый последний день месяца</string>
    <string name="every_day">Каждый день</string>
    <string name="every_working_day">Каждый будний день</string>
    <string name="every_week">Каждый понедельник</string>
    <string name="custom_repeat">Задать период повторений</string>
    <string name="repeat_every">Повторять каждый</string>
    <string name="day">день</string>
    <string name="delete_all">Удалить все транзакции серии</string>
    <string name="delete_this">Удалить только выбранную транзакцию</string>
    <string name="edit_all">Редактировать все транзакции серии</string>
    <string name="edit_this">Редактировать только выбранную транзакцию</string>
    <string name="confirm_transaction">Подтвердить транзакцию</string>
    <string name="confirm_history">Подтвердить и добавить в историю</string>
    <string name="confirm">Подтвердить</string>
    <string name="cash">Нал. </string>
    <string name="credit">Кред. </string>
    <string name="debit">Зарп. </string>
    <string name="cards">Наличные\nЗарплатная\nКредитная</string>
    <string name="export_import">Экспорт/импорт</string>
    <string name="export_db">Экспорт базы данных</string>
    <string name="import_db">Импорт базы данных</string>
    <string name="import_sms">Импорт из SMS</string>
    <string name="filter">Фильтр: </string>
    <string name="only_need_confirm">Подтвердить</string>
    <string name="imp">Импорт</string>
    <string name="exp">Экспорт</string>
    <string name="search">Поиск</string>

</resources>
